kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/movies
            pathType: Prefix
            backend:
              service:
                name: movie-service-fastapiapp
                port:
                  number: 80
          - path: /api/v1/casts
            pathType: Prefix
            backend:
              service:
                name: cast-service-svc
                port:
                  number: 80
